# hpc-fem-playground

./: .gitignore  CMakeLists.txt  README.md  README_FRAMEWORK.md  fix.md  prompt.md
.github/instructions/: RULE.instructions.md  RULES.instructions.md
.github/prompts/: DEVELOPMENT.prompt.md  DEVELOP_ROADMAP.prompt.md
benchmark/: CMakeLists.txt  README.md  bench_assembly.cpp  bench_combined.cpp  bench_solver.cpp  plot_results.py  run_scaling.py  strong_scaling_large.csv  test_strong.csv  weak_scaling_large.csv
benchmark/joule_heating_solvers/: CMakeLists.txt  main.cpp
benchmark/poisson_scaling/: CMakeLists.txt  main.cpp  poisson_scaling_ddm1.cpp  poisson_scaling_ddm2.cpp
cases/busbar/: case.xml  mesh.mesh  mesh.mphtxt  mesh.msh  mesh_no_reorder.mesh  result.txt
cases/busbar_order2/: case.xml  material.xml  mesh.mesh  result.txt
configurations/: ConfigureMFEM.cmake
docs/: ddm_optimization_report.md  phase4_benchmarking_results.md  python_environment.md
docs/arch/: PROJECT_FRAMEWORK.md  library_structure.md  plugin_usage_guide.md
docs/chore/: Cartesian3D_index.md  MFEM_Analysis_and_Lessons.md  maxwell_commit_message.md  maxwell_implementation_summary.md  maxwell_module_README.md  maxwell_timedomain_implementation_plan.md  phase1_1_cmake_refactor.md  phase1_2_interface_abstractions.md  phase2_1_one_level_ddm.md  phase2_2_two_level_ddm.md  phase3_2_completion.md
docs/hpcfem-doc/: file_structure.md  naming_registry.md
docs/mfem-basic-usage/: basic_usage_scalar_static.md  block_operators_coupled_systems.md  boundary_conditions_guide.md  domain_decomposition_ddm.md  eigenvalue_problems.md  frequency_domain_problems.md
docs/mfem-design-concept/: transient_time_dependent.md
docs/mpfem-doc/: implementation_plan.md
example/: CMakeLists.txt  busbar_case_summary.cpp  busbar_pipeline.cpp  ex0_cylinder_dirichlet.cpp  ex1_cube_mixed_bc.cpp  ex2_rect_waveguide.cpp  ex2p_rect_waveguide_hypre.cpp  ex3_transient_heat.cpp  ex4_eigenvalue_laplacian.cpp  ex5_coupled_problem.cpp  ex5_plugin_demo.cpp  ex6_multiple_materials.cpp  ex6_nonlinear_joule_heating.cpp  ex7_maxwell_cavity.cpp  ex7_maxwell_rk4.cpp  start.cpp  start_p2.cpp
scripts/: compare_comsol_results.py  mphtxt_to_gmsh.py  mphtxt_to_mfem_mesh.py
src/: CMakeLists.txt  case_xml_summary_reader.cpp  case_xml_summary_reader.hpp  id_range_parser.cpp  id_range_parser.hpp  logger.cpp  logger.hpp  mpfem.hpp  mpfem_types.hpp
src/assembly/: coupling_manager.cpp  coupling_manager.hpp  mfem_coupled_solver.cpp  mfem_coupled_solver.hpp
src/hpcfem/: fem_problem.cpp  fem_problem.hpp  joule_heating_coefficient.hpp  physics_electrostatics.cpp  physics_electrostatics.hpp  physics_interface.hpp  physics_joule_heating.cpp  physics_joule_heating.hpp  physics_thermal.cpp  physics_thermal.hpp  solver_block_gauss_seidel.cpp  solver_block_gauss_seidel.hpp  solver_ddm_schwarz.cpp  solver_ddm_schwarz.hpp  solver_hypre_amg.cpp  solver_hypre_amg.hpp  solver_interface.hpp  solver_one_level_schwarz.cpp  solver_one_level_schwarz.hpp  solver_two_level_schwarz.cpp  solver_two_level_schwarz.hpp
src/hpcfem/core/: fem_problem.cpp  fem_problem.hpp  finite_element_space.cpp  finite_element_space.hpp  physics_interface.hpp  solver_interface.hpp
src/hpcfem/physics/: maxwell_boundary.cpp  maxwell_boundary.hpp  maxwell_materials.cpp  maxwell_materials.hpp  maxwell_sources.cpp  maxwell_sources.hpp  physics_cavity_eigen.cpp  physics_cavity_eigen.hpp  physics_electrostatics.cpp  physics_electrostatics.hpp  physics_joule_heating.cpp  physics_joule_heating.hpp  physics_maxwell_timedomain.cpp  physics_maxwell_timedomain.hpp  physics_thermal.cpp  physics_thermal.hpp  physics_waveguide_eigen.cpp  physics_waveguide_eigen.hpp
src/hpcfem/solvers/: solver_block_gauss_seidel.cpp  solver_block_gauss_seidel.hpp  solver_hypre_amg.cpp  solver_hypre_amg.hpp
src/io/: boundary_spec.cpp  boundary_spec.hpp  case_xml_reader.cpp  case_xml_reader.hpp  comsol_result_reader.cpp  comsol_result_reader.hpp  material_xml_reader.cpp  material_xml_reader.hpp  value_parser.cpp  value_parser.hpp
src/model/: case_model.hpp  material_model.hpp  physics_problem_model.hpp  simulation_data.hpp
src/output/: comsol_text_exporter.cpp  comsol_text_exporter.hpp  vtu_exporter.cpp  vtu_exporter.hpp
src/physics/: electrostatics_solver.cpp  electrostatics_solver.hpp  heat_transfer_solver.cpp  heat_transfer_solver.hpp  physics_field_solver.hpp  physics_problem_builder.cpp  physics_problem_builder.hpp  solid_mechanics_solver.cpp  solid_mechanics_solver.hpp
src/plugins/: assembly_plugin.hpp  mfem_plugins.hpp  plugin_base.hpp  solver_plugin.hpp
src/solver/: cg_gs_solver.cpp  cg_gs_solver.hpp  direct_solver.cpp  direct_solver.hpp  hypre_boomeramg_solver.cpp  hypre_boomeramg_solver.hpp  linear_solver_factory.cpp  linear_solver_strategy.hpp  linear_system_solver.cpp  linear_system_solver.hpp  pardiso_solver.cpp  pardiso_solver.hpp
testdata/: testmesh_bar.mesh  testmesh_bar.mphtxt  testmesh_bar.msh  testmesh_cube.mesh  testmesh_cube.mphtxt  testmesh_cube.msh  testmesh_cylinder.mesh  testmesh_cylinder.mphtxt  testmesh_cylinder.msh  testmesh_package.mesh  testmesh_package.mphtxt  testmesh_package.msh
tests/: CMakeLists.txt  test_case_xml_reader_full.cpp  test_case_xml_summary.cpp  test_ddm_one_level.cpp  test_ddm_two_level.cpp  test_fe_space.cpp  test_id_range_parser.cpp  test_material_xml_reader.cpp  test_mfem_baseline.cpp  test_mfem_coupled_solver.cpp  test_mfem_linkage.cpp  test_physics_cavity_eigen.cpp  test_physics_coupling.cpp  test_physics_electrostatics.cpp  test_physics_interface_mock.cpp  test_physics_joule_heating_block.cpp  test_physics_maxwell_timedomain.cpp  test_physics_thermal.cpp  test_physics_waveguide_eigen.cpp  test_problem_abstraction.cpp  test_solver_block_gauss_seidel.cpp  test_solver_ddm_schwarz.cpp  test_solver_hypre_amg.cpp  test_solver_interface.cpp  test_solver_interface_mock.cpp
toys/: Makefile  whitney_form  whitney_form.cpp
